fixed align/justify for card wrapper to make cards same size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,8 +93,6 @@ footer{
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(15rem,1fr));
     grid-gap: 1rem;
-    justify-items: center;
-    align-items: center;
     padding: 10px;
 }
 .card{
